; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/grep/extr_quotearg.c_clone_quoting_options.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/grep/extr_quotearg.c_clone_quoting_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.quoting_options = type { i32 }

@default_quoting_options = common dso_local global %struct.quoting_options zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.quoting_options* @clone_quoting_options(%struct.quoting_options* %0) #0 {
  %2 = alloca %struct.quoting_options*, align 8
  %3 = alloca %struct.quoting_options*, align 8
  store %struct.quoting_options* %0, %struct.quoting_options** %2, align 8
  %4 = call i64 @xmalloc(i32 4)
  %5 = inttoptr i64 %4 to %struct.quoting_options*
  store %struct.quoting_options* %5, %struct.quoting_options** %3, align 8
  %6 = load %struct.quoting_options*, %struct.quoting_options** %3, align 8
  %7 = load %struct.quoting_options*, %struct.quoting_options** %2, align 8
  %8 = icmp ne %struct.quoting_options* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load %struct.quoting_options*, %struct.quoting_options** %2, align 8
  br label %12

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %11, %9
  %13 = phi %struct.quoting_options* [ %10, %9 ], [ @default_quoting_options, %11 ]
  %14 = bitcast %struct.quoting_options* %6 to i8*
  %15 = bitcast %struct.quoting_options* %13 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %14, i8* align 4 %15, i64 4, i1 false)
  %16 = load %struct.quoting_options*, %struct.quoting_options** %3, align 8
  ret %struct.quoting_options* %16
}

declare dso_local i64 @xmalloc(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
